SONARGO-545 Add return types to "FunctionInvocationTree" (#359)
GitOrigin-RevId: c8996589916643a59b51cc9f516bb0a6db53b576